Added toc_gen preprocessor, figured out implementation.

--- a/site/layout/_base.html
+++ b/site/layout/_base.html
@@ -75,13 +75,13 @@
         </div>
     </div>
     
-    {% load tocgen %}
-    {% tocgen %}
+{#    {% load tocgen %}
+    {% tocgen %} #}
         {% block main_content %}
         {% endblock %}
         
         {{ contents }}
-    {% endtocgen %}
+{#    {% endtocgen %} #}
 </div>
 
 <div id="footer">
