Added 404 page, minor design tweaks.

--- a/site/layout/_base.html
+++ b/site/layout/_base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -80,8 +80,7 @@
 </div>
 
 <div id="footer">
-    Contents &copy; {% now "Y" %} Peter Marheine,
-    last generated  {% now "Ymd\THisO" %}.
+    Contents &copy; {% now "Y" %} Peter Marheine, last generated  {% now "Ymd\THisO" %}.
     <!-- ISO 8601 date format, for the interested reader -->
 </div>
 </body>
