Added tagline generator.

--- a/site/layout/_base.html
+++ b/site/layout/_base.html
@@ -38,7 +38,8 @@
         タリ
     </span>
     <span id="tagline">
-        More fun than a kick in the teeth
+        {% load tagline %}
+        {% r_tagline %}
     </span>
 </h1>
 
