Continued blog integration and styling tweaks.

--- a/site/layout/_base.html
+++ b/site/layout/_base.html
@@ -30,12 +30,12 @@
 </head>
 
 <body>
-<!-- alt header: たり - I prefer the hiragana, but katakana is more correct -->
 <h1 id="pagehead">
     <!-- aside: setting lang here for the benefit of screen readers and
          friends so nobody tries to pronounce that erroneously -->
     <span lang="ja">
         タリ
+        <!-- For the non-Japanese reader, pronounce as tɑːriː (IPA) -->
     </span>
     <span id="tagline">
         {% load tagline %}
@@ -51,34 +51,44 @@
         {% if page.title %}
             {{page.title}}
         {% else %}
-            {{page.page_name}}
+            {{page.page_name|unslugify}}
         {% endif %}
     </a>
     {% for n in page.node.ancestors reversed %}
         {% with n.url|length_is:"0" as is_root %}
             &lt; <a href="
                 {% if is_root %}
-                    /
+                    /">{{n.name}}
                 {% else %}
-                    {{n.url}}
-                {% endif %}">{{n.name}}</a>
+                    {{n.url}}">{{n.name|unslugify}}
+                {% endif %}</a>
         {% endwith %}
     {% endfor %}
 </div>
 
 <div id="content">
     <div id="navi">
+        <div id="navlinks">
+            <table style="width: 100%">
+                <tr>
+                    <td><a href="/">Home</a></td>
+                    <td class="right"><a href="/about/">About</a></td>
+                </tr>
+                <tr>
+                    <td><a href="/blog/">Blog</a></td>
+                    <td class="right"><a href="/projects/">Projects</a></td>
+                </tr>
+                <tr>
+                    <td><a href="/muse/">Muse</a></td>
+                    <td class="right"><a href="/contact/">Contact</a></td>
+            </table>
+        </div>
         {% if page.contents %}
-            <h2 class="right">Contents</h2>
+            <hr id="break"/>
+            <h2>Contents</h2>
             {% load unordered_list_a %}
             <ul>{{ page.contents|unordered_list_a }}</ul>
-            <hr id="break"/>
         {% endif %}
-        <div id="navlinks">
-            <h2>Home</h2>
-            <h2>About</h2>
-            <h2>Me</h2>
-        </div>
     </div>
     
     {% block main_content %}
