--- a/site/media/css/base.css
+++ b/site/media/css/base.css
@@ -1,13 +1,14 @@
 html { 
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 body {
     background-color: #e1ddd9;
     font-family: Verdana, Arial, SunSans-Regular, Sans-Serif;
     color: #564b47;
-    padding: 0px 20px;
-    margin: 0px;
+    margin: 0 auto 0 auto;
+    max-width: 75em;
+    min-width: 40em;
 }
 
 #pagehead {
@@ -46,27 +47,35 @@ body {
     float: right;
     width: 14em;
     background-color: #c4cad4;
-    margin: 0px 0px 20px 20px;
-    border-bottom-left-radius: 10px;
+    margin: 0 0 1.5em 1.5em;
+    border-bottom-left-radius: .75em;
     padding-left: .25em;
     padding-bottom: .25em;
 }
-#content #navi a {
-    color: #1f1b19;
+
+#content #navi #navlinks {
+    font-size: 1.1em;
+    margin: .25em 1.25em;
 }
-#content #navi a:hover {
+#content #navi #navlinks a {
     text-decoration: none;
 }
+#content #navi #navlinks a:hover {
+    text-decoration: underline;
+}
+
 #content #navi #break {
     margin: .25em auto .25em 1em;
     border: 0;
     height: 1pt;
-    color: #564b47;
     background-color: #564b47;
     width: 75%;
 }
-#content #navi #navlinks {
-    text-align: right;
+#content #navi a {
+    color: #463b37;
+}
+#content #navi a:hover {
+    text-decoration: none;
 }
 
 .fbox {
@@ -96,7 +105,7 @@ body {
 
 p, ul, ol{
     margin: 0;
-    padding: 0 1.5em .3em .75em;
+    padding: 0 1.5em .75em 1em;
 }
 h2 {
     margin: 0;
@@ -119,4 +128,22 @@ ul {
 
 .right {
     text-align: right;
+}
+
+.post_meta h2 {
+    padding-bottom: 0;
+}
+.post_meta a{
+    color: #463b37;
+}
+.post_meta a:hover {
+    text-decoration: none;
+}
+.post_meta p {
+    font-size: 75%;
+    margin-left: 1em;
+}
+
+.post_body {
+    border-bottom: 1px solid #CCCCCC;
 }
