Added ´read more´ link to post excerpt template.

--- a/site/layout/blog/_post_mini.html
+++ b/site/layout/blog/_post_mini.html
@@ -2,4 +2,8 @@
 {% include "blog/_post_meta.html" %}
 <div class="post_body">
     {% render_excerpt post %}
+    
+    <div class="post_more">
+        <a href="{{post.url}}">Read more..</a>
+    </div>
 </div>
