Misc cleanup, two blog posts.

--- a/site/layout/blog/_post_mini.html
+++ b/site/layout/blog/_post_mini.html
@@ -1,7 +1,7 @@
 
 {% include "blog/_post_meta.html" %}
 <div class="post_body">
-    {% render_excerpt post %}
+    {% render_excerpt post 500 %}
     
     <div class="post_more">
         <a href="{{post.url}}">Read more..</a>
