Added excerpt_only property to posts to drop ´Read more´ link.

--- a/site/layout/blog/_post_mini.html
+++ b/site/layout/blog/_post_mini.html
@@ -2,8 +2,10 @@
 {% include "blog/_post_meta.html" %}
 <div class="post_body">
     {% render_excerpt post 500 %}
-    
-    <div class="post_more">
-        <a href="{{post.url}}">Read more..</a>
-    </div>
+
+    {% if not post.excerpt_only %}
+        <div class="post_more">
+            <a href="{{post.url}}">Read more..</a>
+        </div>
+    {% endif %}
 </div>
