--- a/site/layout/blog/_post.html
+++ b/site/layout/blog/_post.html
@@ -9,6 +9,21 @@
         {% block post %}
         {% endblock %}
     </div>
+    
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'taricorp-net';
+    var disqus_url = '{{page.url}}';
+    //var disqus_developer = 1; //Testing use
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Javascript is required to view comments via
+<a href="http://disqus.com/?ref_noscript">Disqus.</a></noscript>
+
     <div class="nav_prev_next">
     {% if page.next %}
         <span style="float:left">
