--- a/site/media/css/base.css
+++ b/site/media/css/base.css
@@ -171,3 +171,18 @@ a:hover {
     padding: 0 0 .1em .4em;
     width: 7em;
 }
+
+/* Disqus styling overrides */
+#disqus_thread {
+    margin: .5em 1.5em 0 .5em;
+}
+/*#dsq-content h3 {
+    margin-bottom: .5em
+}*/
+#dsq-content #dsq-global-toolbar {
+    margin-top: 0;
+    margin-bottom: .5em;
+}
+/*#dsq-content #dsq-reply {
+    margin-top: 0;
+}*/
