Added link to comments on post_mini, fixed fbox to match child size.

--- a/site/layout/blog/_post.html
+++ b/site/layout/blog/_post.html
@@ -10,6 +10,7 @@
         {% endblock %}
     </div>
     
+<div id="comments"></div>
 <script>
 var idcomments_acct = '808ce8ad057036ef48ef4def8ba80df0';
 var idcomments_post_id;
