Rambling about localizing my name.

--- a/site/media/css/base.css
+++ b/site/media/css/base.css
@@ -47,6 +47,7 @@ div.cleanborder {
     border-top-style: none;
     background-color: #fff;
     overflow: hidden;
+    padding-top: .5em;
 }
 
 #navi {
