--- a/site/layout/blog/_post.html
+++ b/site/layout/blog/_post.html
@@ -10,14 +10,7 @@
         {% endblock %}
     </div>
     
-<div id="comments"></div>
-<script>
-var idcomments_acct = '808ce8ad057036ef48ef4def8ba80df0';
-var idcomments_post_id;
-var idcomments_post_url;
-</script>
-<span id="IDCommentsPostTitle" style="display:none"></span>
-<script type='text/javascript' src='http://www.intensedebate.com/js/genericCommentWrapperV2.js'></script>
+    {% include "_comments.html" %}
 
     <div class="nav_prev_next">
     {% if page.next %}
