--- a/css/main.scss
+++ b/css/main.scss
@@ -162,6 +162,21 @@ pre {
     }
 }
 
+blockquote {
+    background-color: #f2f2f2;
+    padding: .25em .25em .25em 3em;
+
+    :before {
+        display: block;
+        height: 0;
+        position: relative;
+        left: -1em;
+        top: -.25em;
+        content: "\201C";
+        font-size: 200%;
+    }
+}
+
 iframe {
     width: 100%;
 }
