--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 
     <ul id="main-navigation">
         {% for page in site.pages %}
-          {% if page.title %}
+          {% if page.in_global_nav and page.title %}
           <li>
               <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           </li>
