--- a/css/main.scss
+++ b/css/main.scss
@@ -205,6 +205,10 @@ figure {
     color: #666;
 }
 
+.pagination {
+    text-align: center;
+}
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         //"base",
