--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,4 +8,6 @@
         <p class="text">{{ site.description }}</p>
     </div>
 
+    <a href="http://web.archive.org/save/{{ site.url | uri_escape }}{{ site.baseurl | uri_escape }}{{ page.url | uri_escape }}">Save page to IA</a>
+
 </footer>
