--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,11 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    <p class="post-meta">
+    Published {{ page.date | date: site.date_format }}{% if page.last_revised %},
+    last revised {{ page.last_revised | date: site.date_format }}. {% endif %}
+    </p>
+
   </header>
 
   <article class="post-content">
