--- a/themes/twentyfourteen/layouts/partials/footer.html
+++ b/themes/twentyfourteen/layouts/partials/footer.html
@@ -3,7 +3,15 @@
 		<footer id="colophon" class="site-footer" role="contentinfo">
 
 			<div class="site-info">
-				<a href="http://gohugo.io">Proudly powered by Hugo</a>
+				<a href="http://gohugo.io">Reluctantly powered by atomic
+                    badgers.</a>
+                Contents licensed under
+                <a rel="license"
+                   href="http://creativecommons.org/licenses/by-sa/4.0/">
+                    <img src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"
+                         alt="CC-BY-SA" />
+                </a>
+                unless otherwise noted.
 			</div><!-- .site-info -->
 		</footer><!-- #colophon -->
 	</div><!-- #page -->
